<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/connect_menu_button"
            android:icon="@drawable/ic_bluetooth_connected_black_24dp"
            android:title="@string/connect"
            app:showAsAction="never" />
        <item
            android:id="@+id/start_stream_menu_button"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/read_current_data"
            app:showAsAction="never" />

        <item
            android:id="@+id/terminal_menu_button"
            android:icon="@drawable/ic_text_fields_black_24dp"
            android:title="@string/terminal"
            app:showAsAction="never" />
    </group>

    <item android:title="">
        <menu>
                <item
                    android:id="@+id/info_menu_button"
                    android:icon="@drawable/ic_perm_device_information_black_24dp"
                    android:title="@string/info"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/settings_menu_button"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/settings"
                    app:showAsAction="never" />
        </menu>
    </item>


</menu>